mejoras al diseño css, se agregó más contenido al proyecto y una nueva image (enseña y aprende)

--- a/index.html
+++ b/index.html
@@ -5,35 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="styles-coder11.css">
+  <link rel="stylesheet" href="style.css"> 
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Code R11: Ruta de Aprendizaje 2022-2023</title>
-  <style>
-    body,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-      font-family: "Lato", sans-serif
-    }
-
-    .w3-bar,
-    h1,
-    button {
-      font-family: "Montserrat", sans-serif
-    }
-
-    .fa-anchor,
-    .fa-coffee {
-      font-size: 200px
-    }
-  </style>
+  <link rel="stylesheet" href="styles-coder11.css">
 </head>
 
 <body id="inicio">
@@ -88,7 +66,7 @@
 
       <div class="w3-third w3-center">
         <!-- <i class="fa fa-anchor w3-padding-64 w3-text-red"></i> -->
-        <img class="imgSecciones" src="public/coder11-001.jpg" alt="Aprendizaje Activo" >
+        <img class="imgSecciones" src="public/coder11-001.jpg" alt="Aprendizaje Activo">
       </div>
     </div>
   </div>
@@ -98,21 +76,23 @@
     <div class="w3-content">
       <div class="w3-third w3-center">
         <!-- <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i> -->
-        <img class="imgSecciones" src="public/coder11-002.gif" alt="Ruta de Aprendizaje del desarrollo web" >
+        <img  class="imgSecciones" src="public/coder11-002.gif" alt="Ruta de Aprendizaje del desarrollo web">
       </div>
 
-      <div class="w3-twothird">
+      <div class="w3-twothird" style="padding-left: 20px;">
         <h1>Ruta JavaScript 2022-2023: Desarrollo y Diseño Web</h1>
-        <h5 class="w3-padding-32">Recuerda esto, <em>solo se tiene éxito
-            cuando apoyas la escalera en la pared correcta</em>. En un mundo
+        <h5 class="w3-padding-32">Programa de aprendizaje activo para aprender y desarrollar 
+          las habilidades para crear sitios y aplicaciones web.   </h5>   
+          <p>Recuerda esto, <em>"solo se tiene éxito
+            cuando apoyas la escalera en la pared correcta"</em>. En un mundo
           tecnológico con cientos de herramientas y más de una docena de
           lenguajes de programación que emplean las empresas más importantes,
           <strong>¿sabes que tipo de tecnologías y que ecosistema de trabajo elegir?</strong>
-          El proyecto Code R11 fue ideado para resolver este dilema. Así que hemos
+          El <b>proyecto Code R11</b> fue ideado para resolver este dilema. Así que hemos
           elegido para ti un paquete de herramientas y el entorno
           de programación de JavaScript para tu aprendizaje activo como
-          tu base primaria.
-        </h5>
+          punto de partida. 
+          </p>
 
       </div>
       <button onclick="ocultar('retoCoder18')" class="w3-button w3-left-align w3-green">
@@ -120,7 +100,8 @@
       </button>
 
       <div id="retoCoder18" class="w3-hide w3-container">
-        <p class="w3-text-grey"><strong>¿Quieres convertirte en un desarrollador profesional en el menor tiempo
+        <h2>Desarrollador Web Profesional</h2>
+        <p class="w3-text-grey"><strong>¿Quieres convertirte en un <b>desarrollador web</b> profesional en el menor tiempo
             posible?</strong> Tu reto, si decides aceptarlo..., consiste en mantener un <b>enfoque orientado al
             aprendizaje y prácticas constantes</b> de estos paquetes elegidos. Esta es la
           clave para dominar el <b>desarrollo y diseño web profesional</b>.
@@ -164,7 +145,7 @@
 
       <div class="w3-third w3-center">
         <!-- <i class="fa fa-anchor w3-padding-64 w3-text-red"></i> -->
-        <img class="imgSecciones"  src="public/coder11-003.png" alt="Aprendizaje Activo" >
+        <img class="imgSecciones" src="public/coder11-003.png" alt="Aprendizaje Activo">
       </div>
     </div>
   </div>
@@ -181,11 +162,16 @@
       <div class="w3-twothird">
         <h2>1. Fundamentos para el Desarrollo web</h2>
         <ul>
-          <li>HTML: Estructura</li>
-          <li>CSS: Estilo y diseño</li>
-          <li>JavaScript: Lenguaje de programación</li>
-          <li>GitHUB: Repositorio y control de versiones</li>
-          <li>Visual Studio Code: Editor de código fuente</li>
+          <li><b>HTML</b>: Lenguaje de marcado para la estructura y elaboración de páginas web.</li>
+          <li><b>CSS</b>: Lenguaje de Diseño gráfico para definir el Estilo y diseño de un documento HTML.</li>
+          <li><b>JavaScript</b>: Lenguaje de programación de secuencias de comandos</li>
+          <li><b>TypeScript</b>: Lenguaje de programación para desarrollar
+            aplicaciones JavaScript que añade tipos estáticos y objetos basados en clases.</li>
+          <li><b>Visual Studio Code</b>: Editor de código fuente</li>
+          <li><b>Git:</b>Sistema de control de versiones para el registro de los cambios de un proyecto.</li>
+          <li><b>GitHub</b>: Plataforma de Desarrollo para alojar proyectos utilizando el sistema de control de
+            versiones Git.</li>
+
         </ul>
         <div class="imgBloque1">
 
@@ -265,6 +251,64 @@
           <img src="public/mongoDB.jpg" alt="MongoDB">
           <img src="public/mariaDB.jpg" alt="MariaDB">
         </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 5.  -->
+  <div id="marcoDesarrollo" class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-content">
+      <div class="w3-third w3-center">
+        <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
+      </div>
+  
+      <div class="w3-twothird">
+        <h2>5. Proyectos </h2>
+        <p>Diseño de Sitios y Aplicaciones Web: Tu objetivo y meta final
+          es realizar proyectos digitales, creativos y funcionales,
+          adaptados a las exigencias del cliente y basados
+          en la experiencia del usuario.</p>
+        <ul>
+          <li><b>Introducción a las etapas del Desarrollo Web</b>: Requisitos y consultoría, documentación del proyecto,
+            arquitectura y usabilidad, diseño, desarrollo front, desarrollo back, crossbrowsing y testing, entrega y
+            puesta en producción.</li>
+          
+          <li><b>Creación de un portafolio personal</b></li>
+          <li><b>Creación de proyectos para tu portafolio</b></li>
+        </ul>
+        <!-- <div class="imgBloque1">
+          <img src="public/nextjs.jpg" alt="Node JS">
+          <img src="public/Nextjs-Vercel.jpg" alt="React">
+          <img src="public/vercel.jpg" alt="Chakra UI">
+        </div> -->
+      </div>
+    </div>
+  </div>
+
+  <!-- aprende y enseña -->
+  <div class="w3-container style="padding:128px 16px" style="margin: 0; padding: 0;">
+    <img style="margin: 0; padding: 0; width: 100%; height: auto;" src="public/coder11-000.jpg" alt="aprende y enseña">
+  </div>
+
+  <!-- a quien va dirigido -->
+  <div id="backend" class="w3-row-padding w3-padding-64 w3-container">
+    <div class="w3-content">
+      <div class="w3-twothird">
+        <!-- <div class="w3-third w3-center">
+          <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
+        </div> -->
+        <h2>A quien va dirigido</h2>
+        <ul>          
+          <li>Estudiantes y recién graduados que buscan especializarse.</li>
+          <li>Profesionales que quieren cambiar de sector.</li>
+          <li>Emprendedores o freelancer que quieren ofrecer sus propios servicios de diseño y creación de sitios y aplicaciones web.</li>
+          
+        </ul>
+        <!-- <div class="imgBloque1">
+          <img src="public/nodejsBackend.jpg" alt="Node JS Backend">
+          <img src="public/mongoDB.jpg" alt="MongoDB">
+          <img src="public/mariaDB.jpg" alt="MariaDB">
+        </div> -->
       </div>
     </div>
   </div>
